[package]
name = "CancerSig"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "CancerSig"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.1"
serde = "1.0"
serde_json = "1.0"
async-std = "1.10.0"
async-fs = "1.5.0"
clap = "3.0"
anyhow = "1.0.51"
futures = "0.3.28"
tokio-util = "0.7.8"